--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ html{
     padding: 0;
     margin: 0;
 }
+
+a {
+    color: white;
+}
+
 body{
     background-color: var(--background);
     color: white;
@@ -101,13 +106,33 @@ main{
 
 main section p{
     border: var(--border);
-    
+    position: absolute;
+    font-size: larger;
 }
 
 main section img{
     margin-left: 0px;
     margin-top: 150px;
 }
+
+main section ul{
+    list-style-type: none;
+    margin-top: 90px;
+}
+
+main section ul li{
+    display: inline-block;
+    font-size: larger;
+    padding: 20px;
+}
+
+@media screen and (max-width: 1000px) {
+    main {
+        margin: 0px;
+    }
+}
+
+
 
 
 
